# standard-code-quality-workflow

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
test/: main.py
